sandc/test/fixtures/astRegression/shouldSucceed/productions/classItem/ClassInstancePropertyDeclaration.sand
pub class ClassInstancePropertyDeclaration {
    foo: int;
    foo: Foo;

    var foo: Foo;
    shadow foo: Foo;

    pub foo: Foo;
    pub var foo: Foo;
    pub shadow foo: Foo;

    (pub get prot set) foo: Foo;
    (pub get) prot foo: Foo;
    (priv get priv set) foo: Foo;

    (pub get customGetterName pub set customSetterName) foo: Foo;
}