sandc/test/fixtures/astRegression/shouldFail/productions/parenthesizedFormalMethodDeclarations/VarPropertySetter.sand
pub class VarPropertySetter {
    foo(var this.foo: int) {
        
    }
}